:sparkles: feat: create processing your payment screen and add lottie and animatable

--- a/src/app/(modules)/(common)/i18n/locales/pt-BR/translation.json
+++ b/src/app/(modules)/(common)/i18n/locales/pt-BR/translation.json
@@ -8,6 +8,9 @@
     "card": "Cartão",
     "end": "Final",
     "pay": "Pagar",
-    "credit_cards": "Cartões de crédito"
+    "credit_cards": "Cartões de crédito",
+    "midway_account": "Conta Midway",
+    "processing": "Processando",
+    "your_transfer": "sua transferência"
   }
 }
