:sparkles: feat: create pick installments

--- a/src/app/(modules)/(common)/i18n/locales/pt-BR/translation.json
+++ b/src/app/(modules)/(common)/i18n/locales/pt-BR/translation.json
@@ -18,6 +18,7 @@
     "success": "sucesso",
     "to": "Para",
     "value": "Valor",
-    "date": "Data"
+    "date": "Data",
+    "pick_installments": "Escolher parcelas"
   }
 }
